<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/ToolbarMain">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ToolbarTextMain"
            android:text="@string/app_name"
            android:textSize="@dimen/toolBarTextSize">
        </TextView>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/ToolbarMain">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ChosenMonth"
            android:padding="@dimen/padding"
            android:textSize="@dimen/textSize"
            android:layout_weight="1">
        </TextView>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/spinnerMonth"
            android:layout_weight="2">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/Sum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mainTextViewText"
            android:gravity="center"
            android:textSize="@dimen/textSize">
        </TextView>
        <Spinner
            android:layout_width="wrap_content"
            android:id="@+id/CurrencySpinnerInMain"
            android:layout_height="match_parent">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/llForAdd">
        <Button
            android:id="@+id/btnAddExp"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btnAddExp"
            android:textAllCaps="false"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="ClickBtnExp">
        </Button>
        <Button
            android:id="@+id/BtnAddInc"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btnAddInc"
            android:textAllCaps="false"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="ClickBtnInc">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/llForAdd"
        android:id="@+id/llForList">
        <Button
            android:id="@+id/btnAllExp"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/btnColor"
            android:text="@string/showAllExp"
            android:textAllCaps="false"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="ClickBtnAllExc">
        </Button>
        <Button
            android:id="@+id/BtnAllInc"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/btnColor"
            android:text="@string/showAllInc"
            android:textAllCaps="false"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="ClickBtnAllInc">
        </Button>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/llForList"
        android:layout_margin="@dimen/margin"
        android:padding="@dimen/padding"
        android:textSize="@dimen/textSize"
        android:backgroundTint="@color/btnColor"
        android:text="@string/AllCatList"
        android:textAllCaps="false"
        android:onClick="ClickBtnAllCat">
    </Button>
</RelativeLayout>