<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<androidx.appcompat.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/AllCatList"
        android:textSize="@dimen/toolBarTextSize">
    </TextView>
</androidx.appcompat.widget.Toolbar>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llCat"
        android:layout_weight="1">
    </ListView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/butCreateNewCat"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/textSize"
        android:textAllCaps="false"
        android:backgroundTint="@color/btnColor"
        android:text="@string/CatCreationBtn"
        android:onClick="ClickCreateBtnCatList">
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/butBackCat"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/textSize"
        android:textAllCaps="false"
        android:backgroundTint="@color/btnColor"
        android:text="@string/backBtn"
        android:onClick="ClickBackBtnCatList">
    </Button>
</LinearLayout>