<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/CatCreationToolBar"
                    android:textSize="@dimen/toolBarTextSize"
                    android:id="@+id/ToolbarTextNewCat">
                </TextView>
        </androidx.appcompat.widget.Toolbar>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/EditTextNameCategory"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin">
        </EditText>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditTextNameCategory"
            android:id="@+id/CheckBoxInc"
            android:text="@string/Inc"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin">
        </CheckBox>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CheckBoxInc"
            android:id="@+id/CheckBoxExc"
            android:text="@string/Exc"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin">
        </CheckBox>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/saveBtn"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/btnColor"
                    android:padding="@dimen/padding"
                    android:layout_margin="@dimen/margin"
                    android:layout_weight="1"
                    android:id="@+id/SaveCatBtn"
                    android:textSize="@dimen/textSize"
                    android:onClick="ClickSaveCatBtn">
                </Button>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/deleteBtn"
                    android:textSize="@dimen/textSize"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/btnColor"
                    android:padding="@dimen/padding"
                    android:layout_margin="@dimen/margin"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:visibility="invisible"
                    android:id="@+id/DeleteCatBtn"
                    android:onClick="ClickDeleteCatBtn">
                </Button>
        </LinearLayout>
</RelativeLayout>