<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/toolbar">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ToolbarTextInSecond"
            android:textSize="@dimen/toolBarTextSize">
        </TextView>
    </androidx.appcompat.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_above="@id/categorySpinner">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/SumText"
                    android:textSize="@dimen/textSize"
                    android:layout_weight="1"
                    android:inputType="numberDecimal">
                </EditText>
                <Spinner
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/CurrencySpinnerInAdd">
                </Spinner>
            </LinearLayout>
        <Spinner
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/categorySpinner"
            android:textAlignment="center"
            android:layout_centerInParent="true">
        </Spinner>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/categorySpinner">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/margin"
                android:padding="@dimen/padding"
                android:text="@string/TextData">
            </TextView>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/textSize"
                android:layout_margin="@dimen/margin"
                android:padding="@dimen/padding"
                android:layout_weight="2"
                android:focusable="false"
                android:id="@+id/DateText">
            </EditText>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/llForButton">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/textSize"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:id="@+id/Save"
            android:text="@string/saveBtn"
            android:textAllCaps="false"
            android:backgroundTint="@color/btnColor"
            android:onClick="Save"
            android:layout_weight="1">
        </Button>
        <Button
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/textSize"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:backgroundTint="@color/btnColor"
            android:text="@string/deleteBtn"
            android:id="@+id/Delete"
            android:enabled="false"
            android:onClick="Delete">
        </Button>
    </LinearLayout>
</RelativeLayout>